// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tree: basic & disabled children & default check children 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
            data-role="container"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
            >
              <h3
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
            >
              <form
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
                  data-amis-name="tree"
                  data-role="form-item"
                >
                  <label
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                  >
                    <span>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          Tree
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__TreeControl __PRISMUI_COMPONENT_CLASS_PREFIX__Form-control"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree"
                    >
                      <ul
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-list"
                      >
                        <li
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item"
                          style="--Tree-depth: 0;"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                          >
                            <div
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemArrow"
                            >
                              <icon-mock
                                class="icon icon-down-arrow-bold"
                                icon="down-arrow-bold"
                              />
                            </div>
                            <div
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                            >
                              <i
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemIcon __PRISMUI_COMPONENT_CLASS_PREFIX__Tree-folderIcon"
                              >
                                <icon-mock
                                  class="icon icon-folder"
                                  icon="folder"
                                />
                              </i>
                              <span
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemText"
                                title="Folder A"
                              >
                                Folder A
                              </span>
                              <div
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                              />
                            </div>
                          </div>
                        </li>
                        <li
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item __PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item--isLeaf is-child"
                          style="--Tree-depth: 1;"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                          >
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemArrowPlaceholder"
                            />
                            <div
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                            >
                              <i
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemIcon __PRISMUI_COMPONENT_CLASS_PREFIX__Tree-leafIcon"
                              >
                                <icon-mock
                                  class="icon icon-file"
                                  icon="file"
                                />
                              </i>
                              <span
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemText"
                                title="file A"
                              >
                                file A
                              </span>
                              <div
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                              />
                            </div>
                          </div>
                        </li>
                        <li
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item is-child"
                          style="--Tree-depth: 1;"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                          >
                            <div
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemArrow"
                            >
                              <icon-mock
                                class="icon icon-down-arrow-bold"
                                icon="down-arrow-bold"
                              />
                            </div>
                            <div
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                            >
                              <i
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemIcon __PRISMUI_COMPONENT_CLASS_PREFIX__Tree-folderIcon"
                              >
                                <icon-mock
                                  class="icon icon-folder"
                                  icon="folder"
                                />
                              </i>
                              <span
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemText"
                                title="Folder B"
                              >
                                Folder B
                              </span>
                              <div
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                              />
                            </div>
                          </div>
                        </li>
                        <li
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item __PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item--isLeaf is-child"
                          style="--Tree-depth: 2;"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                          >
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemArrowPlaceholder"
                            />
                            <div
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                            >
                              <i
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemIcon __PRISMUI_COMPONENT_CLASS_PREFIX__Tree-leafIcon"
                              >
                                <icon-mock
                                  class="icon icon-file"
                                  icon="file"
                                />
                              </i>
                              <span
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemText"
                                title="file b1"
                              >
                                file b1
                              </span>
                              <div
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                              />
                            </div>
                          </div>
                        </li>
                        <li
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item __PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item--isLeaf is-child"
                          style="--Tree-depth: 2;"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                          >
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemArrowPlaceholder"
                            />
                            <div
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                            >
                              <i
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemIcon __PRISMUI_COMPONENT_CLASS_PREFIX__Tree-leafIcon"
                              >
                                <icon-mock
                                  class="icon icon-file"
                                  icon="file"
                                />
                              </i>
                              <span
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemText"
                                title="file b2"
                              >
                                file b2
                              </span>
                              <div
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                              />
                            </div>
                          </div>
                        </li>
                        <li
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item __PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item--isLeaf"
                          style="--Tree-depth: 0;"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                          >
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemArrowPlaceholder"
                            />
                            <div
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                            >
                              <i
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemIcon __PRISMUI_COMPONENT_CLASS_PREFIX__Tree-leafIcon"
                              >
                                <icon-mock
                                  class="icon icon-file"
                                  icon="file"
                                />
                              </i>
                              <span
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemText"
                                title="file C"
                              >
                                file C
                              </span>
                              <div
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                              />
                            </div>
                          </div>
                        </li>
                        <li
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item __PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item--isLeaf"
                          style="--Tree-depth: 0;"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                          >
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemArrowPlaceholder"
                            />
                            <div
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                            >
                              <i
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemIcon __PRISMUI_COMPONENT_CLASS_PREFIX__Tree-leafIcon"
                              >
                                <icon-mock
                                  class="icon icon-file"
                                  icon="file"
                                />
                              </i>
                              <span
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemText"
                                title="file D"
                              >
                                file D
                              </span>
                              <div
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                              />
                            </div>
                          </div>
                        </li>
                      </ul>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
              >
                <button
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
                  type="submit"
                >
                  <span>
                    提交
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tree: showOutline 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
            data-role="container"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
            >
              <h3
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
            >
              <form
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
                  data-amis-name="tree"
                  data-role="form-item"
                >
                  <label
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                  >
                    <span>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          Tree
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__TreeControl __PRISMUI_COMPONENT_CLASS_PREFIX__Form-control"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree __PRISMUI_COMPONENT_CLASS_PREFIX__Tree--outline"
                    >
                      <ul
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-list"
                      >
                        <li
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item"
                          style="--Tree-depth: 0;"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                          >
                            <div
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemArrow"
                            >
                              <icon-mock
                                class="icon icon-down-arrow-bold"
                                icon="down-arrow-bold"
                              />
                            </div>
                            <div
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                            >
                              <i
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemIcon __PRISMUI_COMPONENT_CLASS_PREFIX__Tree-folderIcon"
                              >
                                <icon-mock
                                  class="icon icon-folder"
                                  icon="folder"
                                />
                              </i>
                              <span
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemText"
                                title="Folder A"
                              >
                                Folder A
                              </span>
                              <div
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                              />
                            </div>
                          </div>
                        </li>
                        <li
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item __PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item--isLeaf is-child"
                          style="--Tree-depth: 1;"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                          >
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemArrowPlaceholder"
                            />
                            <div
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                            >
                              <i
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemIcon __PRISMUI_COMPONENT_CLASS_PREFIX__Tree-leafIcon"
                              >
                                <icon-mock
                                  class="icon icon-file"
                                  icon="file"
                                />
                              </i>
                              <span
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemText"
                                title="file A"
                              >
                                file A
                              </span>
                              <div
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                              />
                            </div>
                          </div>
                        </li>
                        <li
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item is-child"
                          style="--Tree-depth: 1;"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                          >
                            <div
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemArrow"
                            >
                              <icon-mock
                                class="icon icon-down-arrow-bold"
                                icon="down-arrow-bold"
                              />
                            </div>
                            <div
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                            >
                              <i
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemIcon __PRISMUI_COMPONENT_CLASS_PREFIX__Tree-folderIcon"
                              >
                                <icon-mock
                                  class="icon icon-folder"
                                  icon="folder"
                                />
                              </i>
                              <span
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemText"
                                title="Folder B"
                              >
                                Folder B
                              </span>
                              <div
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                              />
                            </div>
                          </div>
                        </li>
                        <li
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item __PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item--isLeaf is-child"
                          style="--Tree-depth: 2;"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                          >
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemArrowPlaceholder"
                            />
                            <div
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                            >
                              <i
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemIcon __PRISMUI_COMPONENT_CLASS_PREFIX__Tree-leafIcon"
                              >
                                <icon-mock
                                  class="icon icon-file"
                                  icon="file"
                                />
                              </i>
                              <span
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemText"
                                title="file b1"
                              >
                                file b1
                              </span>
                              <div
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                              />
                            </div>
                          </div>
                        </li>
                        <li
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item __PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item--isLeaf is-child"
                          style="--Tree-depth: 2;"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                          >
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemArrowPlaceholder"
                            />
                            <div
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                            >
                              <i
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemIcon __PRISMUI_COMPONENT_CLASS_PREFIX__Tree-leafIcon"
                              >
                                <icon-mock
                                  class="icon icon-file"
                                  icon="file"
                                />
                              </i>
                              <span
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemText"
                                title="file b2"
                              >
                                file b2
                              </span>
                              <div
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                              />
                            </div>
                          </div>
                        </li>
                        <li
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item __PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item--isLeaf"
                          style="--Tree-depth: 0;"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                          >
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemArrowPlaceholder"
                            />
                            <div
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                            >
                              <i
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemIcon __PRISMUI_COMPONENT_CLASS_PREFIX__Tree-leafIcon"
                              >
                                <icon-mock
                                  class="icon icon-file"
                                  icon="file"
                                />
                              </i>
                              <span
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemText"
                                title="file C"
                              >
                                file C
                              </span>
                              <div
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                              />
                            </div>
                          </div>
                        </li>
                        <li
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item __PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item--isLeaf"
                          style="--Tree-depth: 0;"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                          >
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemArrowPlaceholder"
                            />
                            <div
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                            >
                              <i
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemIcon __PRISMUI_COMPONENT_CLASS_PREFIX__Tree-leafIcon"
                              >
                                <icon-mock
                                  class="icon icon-file"
                                  icon="file"
                                />
                              </i>
                              <span
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemText"
                                title="file D"
                              >
                                file D
                              </span>
                              <div
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                              />
                            </div>
                          </div>
                        </li>
                      </ul>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
              >
                <button
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
                  type="submit"
                >
                  <span>
                    提交
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
